--- a/OMI/Views/Infraestructura/Edit.cshtml
+++ b/OMI/Views/Infraestructura/Edit.cshtml
@@ -6,7 +6,7 @@
     {
         @Html.HiddenFor(o=>o.id);
         @Html.EditorFor(o => o.Autorizar)
-
+        @Html.EditorFor(o=> o.Observacion)
 
     }
 }
