--- a/OMI/Views/Admon/OrdenCompra.cshtml
+++ b/OMI/Views/Admon/OrdenCompra.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<OIM_DAL.Sp_AllPedidoXEstatus_Result2>
+@model IEnumerable<OIM_DAL.Sp_AllPedidoXEstatusXAdmin_Result>
 
 
 
@@ -10,86 +10,95 @@
                 <h3 class="panel-title">Sistema OIM - Ingenieria Aplicada OnePro</h3>
             </div>
             <div class="panel-body">
-                <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
+                
+                <a href="#" name="generar" >Generar</a>
+                <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
                     <thead>
-                        <tr>
+                    <tr>
+                        <th>
+                            Marcar
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Proveedor)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Folio)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Categoria)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Descripcion)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Unidad)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Cantidad)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Estatus)
+                        </th>
 
-                            <th>
-                                @Html.DisplayNameFor(model => model.Proveedor)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Folio)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Categoria)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Descripcion)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Unidad)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Cantidad)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Estatus)
-                            </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Usuario)
+                        </th>
 
-                            <th>
-                                @Html.DisplayNameFor(model => model.Usuario)
-                            </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Fecha)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Proveedor)
+                        </th>
 
-                            <th>
-                                @Html.DisplayNameFor(model => model.Fecha)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Proveedor)
-                            </th>
-                            <th></th>
-                        </tr>
+                        <th></th>
+                    </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Proveedor)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Folio)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Categoria)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Descripcion)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Unidad)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Cantidad)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Estatus)
-                                </td>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td >
+                              <input type="checkbox" name="@Html.DisplayFor(modelItem => item.Id)" value="true"/>
+                            
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Proveedor)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Folio)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Categoria)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Descripcion)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Unidad)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Cantidad)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Estatus)
+                            </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Usuario)
-                                </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Usuario)
+                            </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Fecha)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Proveedor)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Edit", "NuevaSolicitud", new { id = item.Id })
-                                </td>
-                            </tr>
-                        }
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Fecha)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Proveedor)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "NuevaSolicitud", new {id = item.Id})
+                            </td>
+                        </tr>
+                    }
                     </tbody>
 
 
