--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -144,11 +144,17 @@
                     <a href="#" class="waves-effect"><i class="md md-people"></i><span>Admon y Finanzas</span><span class="pull-right"><i class="md md-add"></i></span></a>
                
                     <ul class="list-unstyled">
-                        <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
-                        <li><a href="@Url.Action("SolCotizacion", "Admon")">Solicitud Cotizacion</a></li>
-                        <li><a href="@Url.Action("index", "home")">Seleccion Cotizacion</a></li>
-                        <li><a href="@Url.Action("OrdenCompra", "Admon")">Orden Compra</a></li>
-                        <li><a href="@Url.Action("index", "home")">Evaluacion Post-Venta</a></li>
+                        <li class="has_sub">
+                            <a href="#" class="waves-effect"><span>Compra</span><span class="pull-right"><i class="md md-add"></i></span></a>
+                            <ul>
+                                <li><a href="@Url.Action("PorPedido", "Admon")">Solicitud Compra</a></li>
+                                <li><a href="@Url.Action("OrdenCompra", "Admon")">Orden Compra</a></li> 
+                                <li><a href="@Url.Action("index", "home")">Evaluacion Post-Venta</a></li> 
+                                <li><a href="@Url.Action("index", "home")">Historial Orden Compra</a></li>
+                            </ul>
+                        </li> <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
+                        
+                       
                         <li><a href="@Url.Action("index", "home")">Cumpliento Personal</a></li>
                         <li><a href="@Url.Action("index", "home")">Catalogo Proveedores</a></li>
                         <li><a href="@Url.Action("index", "home")">Estimaciones</a></li>
