formato de orden de compra 1

--- a/OMI/Views/Infraestructura/Details.cshtml
+++ b/OMI/Views/Infraestructura/Details.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-12">
         <div class="panel panel-border panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Ingenieria Aplicada OnePro @Model.TbSol.EnviadoCom</h3>
+                <h3 class="panel-title">Ingenieria Aplicada OnePro </h3>
             </div>
             <div class="panel-body">
               
