--- a/OMI/Views/Admon/OrdenCompra.cshtml
+++ b/OMI/Views/Admon/OrdenCompra.cshtml
@@ -10,99 +10,99 @@
                 <h3 class="panel-title">Sistema OIM - Ingenieria Aplicada OnePro</h3>
             </div>
             <div class="panel-body">
-                
-                <a href="#" name="generar" >Generar</a>
-                <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
-                    <thead>
-                    <tr>
-                        <th>
-                            Marcar
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Proveedor)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Folio)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Categoria)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Descripcion)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Unidad)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Cantidad)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Estatus)
-                        </th>
-
-                        <th>
-                            @Html.DisplayNameFor(model => model.Usuario)
-                        </th>
-
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fecha)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Proveedor)
-                        </th>
-
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    @foreach (var item in Model)
-                    {
+                @using (Html.BeginForm("ordencompra", "Admon", FormMethod.Post))
+                {
+                    <a href="#" name="generar">Generar</a>
+                    <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
+                        <thead>
                         <tr>
-                            <td >
-                              <input type="checkbox" name="@Html.DisplayFor(modelItem => item.Id)" value="true"/>
-                            
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Proveedor)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Folio)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Categoria)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Descripcion)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Unidad)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Cantidad)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Estatus)
-                            </td>
+                            <th>
+                                Marcar
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Proveedor)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Folio)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Categoria)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Descripcion)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Unidad)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Cantidad)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Estatus)
+                            </th>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Usuario)
-                            </td>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Usuario)
+                            </th>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fecha)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Proveedor)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Edit", "NuevaSolicitud", new {id = item.Id})
-                            </td>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Fecha)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Proveedor)
+                            </th>
+
+                            <th></th>
                         </tr>
-                    }
-                    </tbody>
+                        </thead>
+                        <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td >
+                                    <input type="checkbox" name="@Html.DisplayFor(modelItem => item.Id)" value="true"/>
 
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Proveedor)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Folio)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Categoria)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Descripcion)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Unidad)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Cantidad)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Estatus)
+                                </td>
 
-                </table>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Usuario)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Fecha)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Proveedor)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Edit", "NuevaSolicitud", new {id = item.Id})
+                                </td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
+                }
             </div>
         </div>
     </div>
