--- a/OMI/Views/Admon/OrdenCompra.cshtml
+++ b/OMI/Views/Admon/OrdenCompra.cshtml
@@ -12,7 +12,7 @@
             <div class="panel-body">
                 @using (Html.BeginForm("ordencompra", "Admon", FormMethod.Post))
                 {
-                    <a href="#" name="generar">Generar</a>
+                    <button type="submit" class="btn btn-success">Gnerar Orden</button>
                     <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
                         <thead>
                         <tr>
@@ -38,7 +38,7 @@
                                 @Html.DisplayNameFor(model => model.Cantidad)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Estatus)
+                                @Html.DisplayNameFor(model => model.Nombre)
                             </th>
 
                             <th>
@@ -58,9 +58,9 @@
                         <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
+                            <tr name="reglon1" value="@Html.DisplayFor(modelItem => item.Id)">
                                 <td >
-                                    <input type="checkbox" name="@Html.DisplayFor(modelItem => item.Id)" value="true"/>
+                                    <input type="checkbox" name="reglon" value="@Html.DisplayFor(modelItem => item.Id)" />
 
                                 </td>
                                 <td>
@@ -82,7 +82,7 @@
                                     @Html.DisplayFor(modelItem => item.Cantidad)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Estatus)
+                                    @Html.DisplayFor(modelItem => item.Nombre)
                                 </td>
 
                                 <td>
