--- a/OMI/Views/Admon/OrdenCompra.cshtml
+++ b/OMI/Views/Admon/OrdenCompra.cshtml
@@ -49,7 +49,7 @@
                                 @Html.DisplayNameFor(model => model.Fecha)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Proveedor)
+                                @Html.DisplayNameFor(model => model.IdCompra)
                             </th>
 
                             <th></th>
@@ -93,7 +93,7 @@
                                     @Html.DisplayFor(modelItem => item.Fecha)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Proveedor)
+                                    @Html.DisplayFor(modelItem => item.IdCompra)
                                 </td>
                                 <td>
                                     @Html.ActionLink("Edit", "NuevaSolicitud", new {id = item.Id})
