--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -150,7 +150,7 @@
                                 <li><a href="@Url.Action("PorPedido", "Admon")">Solicitud Compra</a></li>
                                 <li><a href="@Url.Action("OrdenCompra", "Admon")">Orden Compra</a></li> 
                                 <li><a href="@Url.Action("index", "home")">Evaluacion Post-Venta</a></li> 
-                                <li><a href="@Url.Action("index", "home")">Historial Orden Compra</a></li>
+                                <li><a href="@Url.Action("Historial", "Admon")">Historial Orden Compra</a></li>
                             </ul>
                         </li> <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
                         
