--- a/OMI/Views/Admon/Formato.cshtml
+++ b/OMI/Views/Admon/Formato.cshtml
@@ -186,7 +186,7 @@
                                   <input type="submit" value="Guardar" id="btnSave" class="btn btn-primary"/><a class="btn btn-success" id="btnCancelar" href="@Url.Action("Enviar", "Solicitud")">Enviar</a>
     <a class="btn btn-primary" id="btnSave" href="@Url.Action("Guadar", "Admon")">Guardar</a>  <button type="submit" class="btn btn-success">Enviar</button>*@
                                       <input type="submit" value="Cancelar" name="Opcion" class="btn btn-danger"/>
-                                      <input type="submit" value="Orde de Compra" name="Opcion" class="btn btn-success"/>
+                                      <input type="submit" value="OrdenCompra" name="Opcion" class="btn btn-success"/>
                                     
                                   }
                               }
