--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -124,11 +124,12 @@
                            
                             <a href="#" class="waves-effect"><span>Inventario</span><span class="pull-right"><i class="md md-add"></i></span></a>
                             <ul>
-                                <li><a href="@Url.Action("Solicitudes", "Infraestructura")">Asignacion</a></li>
+                                <li><a href="@Url.Action("Solicitudes", "Infraestructura")">Alta Inventario</a></li>
                                 <li><a href="@Url.Action("index", "home")">Equipo de Computo</a></li>
                                 <li><a href="@Url.Action("index", "home")">Equipos Varios</a></li>
                                 <li><a href="@Url.Action("index", "home")">Licencia de Software</a></li>
                                 <li><a href="@Url.Action("index", "home")">Vehiculos</a></li>
+                                <li><a href="@Url.Action("index", "home")">Papeleria</a></li>
                             </ul>
                             
                         </li>
