--- a/OMI/Views/Inventario/EquipoComputo.cshtml
+++ b/OMI/Views/Inventario/EquipoComputo.cshtml
@@ -7,12 +7,16 @@
                 <h3 class="panel-title">Sistema OIM - Ingenieria Aplicada OnePro</h3>
             </div>
             <div class="panel-body">
-                <p>
-                    @Html.ActionLink("Create New", "CreaEquipo")
-                </p>
+               
+               
+                <a type="button" class="btn btn-primary" href=@Url.Action("CreaEquipo") >Nuevo Equipo</a>
+             
                 <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
                     <thead>
                     <tr>
+                        <th>
+                            @Html.DisplayNameFor(model=> model.Id)
+                        </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Tipo)
                         </th>
@@ -43,12 +47,18 @@
                         <th>
                             @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
                         </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Tb_EstadoEquipo.Nombre)
+                        </th>
                         <th></th>
                     </tr>
                     </thead>
                     <tbody> 
                     @foreach (var item in Model) {
                         <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Id)
+                            </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Tipo)
                             </td>
@@ -80,9 +90,10 @@
                                 @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
                             </td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                                @Html.DisplayFor(modelItem => item.Tb_EstadoEquipo.Nombre)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "EditEquipo", new {id = item.Id}) 
                             </td>
                         </tr>
                     }
